--- a/index.html
+++ b/index.html
@@ -1258,7 +1258,7 @@
         -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
         -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
         transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-        background-image: url("https://cdn.jsdelivr.net/gh/Web3Engineer/Web3Engineer@main/codeGreenBG.jpeg");
+        background-image: url("./codeGreenBG.jpeg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -1828,7 +1828,7 @@
           <h2 class="major">Resume</h2>
           <span class="image main">
             <img
-              src="https://cdn.jsdelivr.net/gh/Web3Engineer/Web3Engineer@main/mtnBanner.jpg"
+              src="./mtnBanner.jpg"
               alt=""
               style="box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.5)"
             />
@@ -2337,7 +2337,7 @@ https://www.github.com/web3Engineer
           <h2 class="major">About Me</h2>
           <span class="image main"
             ><img
-              src="https://cdn.jsdelivr.net/gh/Web3Engineer/Web3Engineer@main/birdSmallBanner.jpg"
+              src="./birdSmallBanner.jpg"
               alt=""
               style="box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.5)"
           /></span>
@@ -2369,7 +2369,7 @@ https://www.github.com/web3Engineer
           <h2 class="major">Portfolio</h2>
           <span class="image main"
             ><img
-              src="https://cdn.jsdelivr.net/gh/Web3Engineer/Web3Engineer@main/portfolioBanner.jpg"
+              src="./portfolioBanner.jpg"
               alt=""
               style="box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.7)"
           /></span>
