--- a/scroll.html
+++ b/scroll.html
@@ -1,3 +1,7 @@
+<button style="position: fixed; bottom: 20px; left: 20px; z-index: 10000000; font-size: xx-large;"   onclick="window.location.href='index.html'">⬅️Go🎇Back⬅️</button>
+
+
+
 <script id="PRNG">
   var Prng = new function() {
     this.s = 1234;
@@ -4346,7 +4350,7 @@
       cursor: pointer;"
     onmouseover="document.getElementById('SOURCE_BTN').style.backgroundColor=btnHoverCol"
     onmouseout="document.getElementById('SOURCE_BTN').style.backgroundColor='rgba(0,0,0,0)'"
-    onclick="window.location='https://github.com/web3engineer';"
+    onclick="window.location='https://github.com/web3Engineer';"
     title="Fork me on Github!"
   >
     <div style="display:table-cell; vertical-align: middle;">
