--- a/index.html
+++ b/index.html
@@ -1847,7 +1847,7 @@
            <br>
            <p style="text-align: center; font-style: italic">,,,Broke OUT OF prison 10+ times, smuggled drugs + weapons + cellphones for cartel/gang bosses + took out of diddlerz,,,</p>
           <br>
-<p style="text-align: center; font-style: italic">Broke BACK INTO prison 10+ times...</p>
+<p style="text-align: center; font-style: italic">Broke BACK INTO prison 10+ times</p>
           <p style="text-align: center; font-style: italic">...eventually caught, didnt snitch or fold even under torture + cuffed beatings + stuffed into cages, almost died twice, broken skull, broken vertabrea </p>
 <br>
  <br>         
@@ -8764,5 +8764,6 @@ https://www.github.com/web3Engineer
     </script>
   </body>
 </html>
+
 
 
