--- a/index.html
+++ b/index.html
@@ -1840,7 +1840,7 @@
 <p style="text-align: center; font-style: italic; color: red">...100+ combat missions, destroyed entire naberhood blockz</p>
 <br><br>
 
-<p style="text-align: center; font-style: italic; color: white; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Pecker Wood Gangster {TwentyThree/Sixteen}...7y</p>
+<p style="text-align: center; font-style: italic; color: white; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Pecker Wood Gangster {2️⃣3️⃣}...6y</p>
 <br>
 <p style="text-align: center; font-style: italic; color: white; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">,,,Broke OUT OF prison 10+ times, smuggled drugs + weapons + cellphones for cartel/gang bosses + took out of diddlerz,,,</p>
 <br>
@@ -8759,6 +8759,7 @@ https://www.github.com/web3Engineer
     </script>
   </body>
 </html>
+
 
 
 
