--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Daniel.engineer</title>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta property="og:image" content="https://cdn.jsdelivr.net/gh/Web3Engineer/Web3Engineer@main/mtnBanner.jpg" />
+    <meta property="og:image" content="./mtnBanner.jpg" />
     <meta property="og:title" content="Modern Software Solutions" />
     <meta property="og:description" content="Daniel Haynes, Profesional 𝐅𝐮𝐥𝐥-𝐒𝐭𝐚𝐜𝐤 Software Engineer " />
     <meta property="og:url" content="www.Daniel.engineer" />
@@ -8759,6 +8759,7 @@ https://www.github.com/web3Engineer
     </script>
   </body>
 </html>
+
 
 
 
