--- a/index.html
+++ b/index.html
@@ -1835,21 +1835,12 @@
           </span>
          <p style="text-align: center; font-style: italic; color: red">U.S. Army, 10th Mountain Division - Infantry, 2BDE Combat Team {Gun-Wolf}...3y</p>
 <br>
-<p style="text-align: center; font-style: italic; color: red">,,,Fought in Operation Iraqi Freedom (09-10) War, injured,,,6mo</p>
+<p style="text-align: center; font-style: italic; color: red">Fought in Operation Iraqi Freedom (09-10), 100+ combat missions, injured...6mo</p>
 <br>
-<p style="text-align: center; font-style: italic; color: red">...100+ combat missions, destroyed entire naberhood blockz</p>
-<br><br>
 
-<p style="text-align: center; font-style: italic; color: white; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Pecker Wood Gangster {2️⃣3️⃣}...6y</p>
-<br>
-<p style="text-align: center; font-style: italic; color: white; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">,,,Broke OUT OF prison 10+ times, smuggled drugs + weapons + cellphones for cartel/gang bosses + took out of diddlerz,,,</p>
-<br>
-<p style="text-align: center; font-style: italic; color: white; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Broke BACK INTO prison 10+ times</p>
-<p style="text-align: center; font-style: italic; color: white; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">...eventually caught, didnt snitch or fold even under torture + cuffed beatings + stuffed into cages, almost died twice, broken skull, broken vertabrea</p>
-<br><br>
 
-<p style="text-align: center; font-style: italic; color: blue">Wildland Firefighter for California & Los Angeles...2y</p>
-<p style="text-align: center; font-style: italic; color: blue">...36 days fighting forest fires straight, 36 hour shifts, almost died twice, broken skull, broken vertabrea..again</p>
+<p style="text-align: center; font-style: italic; color: red">Wildland Firefighter for California & Los Angeles...2y</p>
+<p style="text-align: center; font-style: italic; color: red">...36 days fighting forest fires straight, 36 hour shifts, almost died twice, broken skull, broken vertabrea</p>
           <p
             id="downloadResume"
             style="
@@ -8759,6 +8750,7 @@ https://www.github.com/web3Engineer
     </script>
   </body>
 </html>
+
 
 
 
