--- a/index.html
+++ b/index.html
@@ -1864,12 +1864,10 @@
                 params.get("fileData") ||
                 
 `Daniel Haynes 
-Software Engineer 
-+1 951 870 8754 
+Full-Stack Software Engineer 
+213-545-0708 
 web3engineer@proton.me 
 Fernandina Beach, FL 32034 
-Willing to relocate anywhere 
-Authorized to work in the US for any employer
 
 ---
 
@@ -1877,17 +1875,25 @@ WORK EXPERIENCE
 
 **Software Engineer** 
 U.S. Army - Remote (1099-IC) 
-January 2012 - Present 
+January 2012 - Present (Biometrics Programming so far)
 > Advanced Technological Training via Military Service 
 > Expert Web and App Developer 
 > Full-Stack Software Engineer 
 > Solidity and EVM Smart Contract Programmer 
 
+**Engineer & IT Assistant** 
+E.C. Phillips & Sons - Ketchikan, AK 
+March 2024 - December 2024
+> Started On the 'Slime-Line', God brought me up from there
+> Programmed PLC's & A Dept. Engineer
+> Managed & Maintained Entire Facilities Computer Systems
+> Worked On Company Servers
+> Developed Custom Company Software 
+
 **IT Administrator** 
 Reflections of Nature - Fernandina Beach, FL 
 January 2021 - January 2023 
-> Created and Maintained Company Servers 
-> Developed Custom Company Software 
+> Developed Company Website & Digital Presence  
 > Reduced Company Costs Significantly 
 
 **Wildland Firefighter** 
@@ -1908,7 +1914,7 @@ January 2018 - January 2019
 U.S. Army - Fort Drum, NY 
 July 2009 - January 2012 
 > Special Operations Troops (SOT) 
-> Unit: 10th Mountain Infantry - 2nd Brigade Combat Team 
+> Unit: 10th Mountain Division Infantry - 2BDE Combat Team 
 > Deployment: Operation Iraqi Freedom 2009-2010 
 > Earned 7 medals 
 > Calm & Collected Under Extreme Pressure 
@@ -1923,7 +1929,7 @@ U.S. Army Preparatory School - Fort Jackson, SC
 January 2009 - June 2009 
 > Computer Science Specialization 
 > Recruited by the US Army at 16 
-> Enlisted to the US Army at age 17 
+> Enlisted to the US Army at 17 
 > Deployed to Baghdad Iraq at 18 
 
 ---
@@ -1942,11 +1948,11 @@ SKILLS
 > Robotics (7 years) 
 > Blockchain & Web3 (7 years) 
 > Microservice Creation, Maintenance, & Administration (7 years) 
-> JavaScript (7 years) 
-> CSS (7 years) 
-> HTML (7 years) 
-> Solidity (4 years) 
-> BASH (4 years) 
+> JavaScript-Programming Language (7 years) 
+> CSS-Programming Language (7 years) 
+> HTML-Programming Language (7 years) 
+> Solidity-Programming Language (4 years) 
+> BASH-Programming Language (4 years) 
 > PLC Programming & Service (4 years) 
 > HMI Programming & Service (4 years) 
 > Mobile Application Development (Android & iOS) (4 years) 
@@ -1958,19 +1964,20 @@ SKILLS
 > Node.js (4 years) 
 > Web3.js (4 years) 
 > Smart Contract Development (EVM Blockchains) (4 years) 
-> Decentralized Applications dApps (4 years)
+> Decentralized Applications-dApps (4 years)
 > Cryptocurrency (4 year)
 > GitHub & Git CLI (4 years) 
-> Manufacturing & Industrial Equipment Technician (2 years) 
 > AI (Artificial Intelligence) (2 years) 
 > Neural Networking (2 years) 
-> Qiskit (Quantum Computer Programming) (1 year) 
+> Manufacturing & Industrial Equipment Technician (1 year) 
+> Qiskit-Programming Language (Quantum Computer Programming) (1 year) 
 
 ---
 
-LINKS
+MY LINKS
 
 https://Daniel.engineer
+https://BiblePortal.net
 https://www.github.com/web3Engineer
 `;
 
@@ -8750,6 +8757,7 @@ https://www.github.com/web3Engineer
     </script>
   </body>
 </html>
+
 
 
 
